FlightPath 7.x Changelog
========================

2024-06-22
  Fixed PHP 8 warnings.
  
  Added watchdog entry if our custom error handler is unable to write to the errors file (that gets emailed out).
  
  Fixed bug where anon users (which triggered PHP errors) were not being added to the errors file to email.
  

2024-06-21
  Worked on Mailgun webhook integration.  Made it so that all email attachments are encrypted.
  
  Renamed content.module's constant CONTENT_PRIVATE_FILE to CONTENT_ENCRYPTED_FILE to better describe what it is.
  Also changed some of the code in content.module's content_add_new_uploaded_file() function to better handle from emails.


2024-06-18
  Show message on new Email form when the student has no email address available.
  
  Minor fix to remove warning in PHP 8.x.


2024-06-17
  Fixed minor warning in alerts module, caused if the author of an alert could not be loaded
  or was generated by the system. Warning appeared when trying to find the author's CWID.
  

2024-06-16
  Added a robots.txt file to the project directory.
  
  Updated the README.txt file.
  
  Added .htaccess file to files directory
  
  Created ability for FlightPath to manage a "private" files directory within custom/files, which
  contains a special .htaccess file to keep Apache from serving any files in that dir.  Changed
  the error handling functionality (which emails on php errors) to use this new private dir.  
  
  Fixed minor typo in lassie module.
  

2024-06-15
  Various changes to suppress warnings and deprecated notices in PHP 8.x
  
  Added spot to enter a temporary directory.
  
  Added code so that PHP errors collect in a temporary file, then get emailed as a digest once per cron run.
  
  When executing PHP code from the Admin Console, warnings are not suppressed with @.  This allows for testing
  error handling.
  

2024-06-04
  Added new system setting, allowing the trimming of ERROR messages from the watchdog table based on age.
  